--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Practice App 1</string>
-    <string name="edit_message">Enter a message to display</string>
+    <string name="edit_message"></string>
     <string name="button_send">Send</string>
 </resources>
